[gd_scene load_steps=2 format=3 uid="uid://cpp6uup1fjkuc"]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_rl2pc"]

[node name="settings_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rl2pc")

[node name="MarginContainerMenu" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 38.0
offset_right = 106.0
offset_bottom = 78.0
scale = Vector2(3.03944, 3.03944)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainerMenu"]
layout_mode = 2

[node name="Menu" type="Button" parent="MarginContainerMenu/VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="MarginContainerPlayer1" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 301.0
offset_top = 107.0
offset_right = 363.0
offset_bottom = 147.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainerPlayer1"]
layout_mode = 2

[node name="Player1" type="Label" parent="MarginContainerPlayer1/VBoxContainer"]
layout_mode = 2
text = "Player 1
"

[node name="OptionButtonPlayer1" type="OptionButton" parent="MarginContainerPlayer1/VBoxContainer"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Controller"
popup/item_0/id = 1
popup/item_1/text = "Keyboard"
popup/item_1/id = 0

[node name="MarginContainerPlayer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 624.0
offset_top = 109.0
offset_right = 686.0
offset_bottom = 149.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainerPlayer2"]
layout_mode = 2

[node name="Player2" type="Label" parent="MarginContainerPlayer2/VBoxContainer"]
layout_mode = 2
text = "Player 2
"

[node name="OptionButtonPlayer2" type="OptionButton" parent="MarginContainerPlayer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

texture_normal = ExtResource("6_jm3ic")
texture_click_mask = ExtResource("8_ycu42")
stretch_mode = 5

[node name="seperator2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="seperator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("4_80ga7")
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("8_t6can")
stretch_mode = 5

[node name="seperator2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(23, 0)
layout_mode = 2

[node name="MusicButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_jm3ic")
texture_click_mask = ExtResource("8_ycu42")
stretch_mode = 5

[node name="Controls" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture_normal = ExtResource("11_y7fk1")
texture_click_mask = ExtResource("12_7fmsw")
stretch_mode = 5

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SoundButton" to="." method="_on_sound_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/MusicButton" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
